Refactor css to multiple files

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,32 +1,33 @@
-/*
- *
- * Global
- *
- */
 
-body {
-	color: #58595b;
-	max-width: 100%;
-	font-size: 18px;
-}
 
-/*
- *
- * Text
- *
- */
 
-h2 { color:  #b8dd9b; }
+/* Import Base CSS file: global CSS, resets */
+@import "base.css";
 
-/*
- *
- * Links
- *
- */
 
-div.links a { color: #58595b; text-decoration: none; border-bottom: 2px solid #b8dd9b; }
-/* div.links a:hover { color:  #e76a58; } */
-div.links a:hover { color:  #b8dd9b; }
+/* Import Layout CSS file: Header, Footer, etc. */
+@import "layout.css";
+
+
+/* Import State CSS file: Object states */
+@import "state.css";
+
+
+
+
+/* Import Modules */
+
+/* Import Buttons CSS */
+@import "module-buttons.css";
+
+/* Import Forms CSS */
+@import "module-forms.css";
+
+/* Import Background CSS */
+@import "module-backgrounds.css";
+
+
+
 
 h4 { display:  inline-block; }
 
@@ -36,28 +37,9 @@ h4 { display:  inline-block; }
  *
  */
 
-.head { 
-	padding: 1rem;
-	background-color: #b8dd9b;
-	min-height: 200px;
-}
 
-/*
- *
- * Nav Dropdown
- *
- */
 
-.leaf {
-	z-index: 1;
-}
 
-/* .leaf .dropdown { z-index: 1; } */
-/* .leaf__links { z-index: 1; } */
-/* .leaf { z-index: 1; } */
-/* .leaf .dropdown-menu { background-color: #fff; } */
-.leaf button { background-color: transparent; }
-.bg-green { background-color: #b8dd9b; }
 
 /*
  *
@@ -145,13 +127,6 @@ h4 { display:  inline-block; }
  *
  */
 
-/*
- *
- * Bootstrap Overrides
- *
- */
-
-.dropdown-menu { min-width: 0rem; }
 
 
 /*
