Fix form class names

--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -37,7 +37,7 @@
 		</section>
 
 		<section id="section--create--exhibition">
-			{{ exhibition_form.csrf_token }}
+			{{ form_exhibition.csrf_token }}
 
 			<h2 class="text-center">Exhibition</h2>
 
@@ -54,10 +54,10 @@
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.name.label }}
+								{{ form_exhibition.name.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.name(class="form-control", placeholder="Exhibition Name") }}
+								{{ form_exhibition.name(class="form-control", placeholder="Exhibition Name") }}
 							</div>
 						</li>
 
@@ -72,10 +72,10 @@
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.start_date.label }}
+								{{ form_exhibition.start_date.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.start_date(class="form-control") }}
+								{{ form_exhibition.start_date(class="form-control") }}
 							</div>
 						</li>
 
@@ -90,10 +90,10 @@
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.end_date.label }}
+								{{ form_exhibition.end_date.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.end_date(class="form-control") }}
+								{{ form_exhibition.end_date(class="form-control") }}
 							</div>
 						</li>
 
@@ -108,19 +108,19 @@
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.opening.label }}
+								{{ form_exhibition.opening.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.opening(class="form-control") }}
+								{{ form_exhibition.opening(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.comments.label }}
+								{{ form_exhibition.comments.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.comments(class="form-control") }}
+								{{ form_exhibition.comments(class="form-control") }}
 							</div>
 						</li>
 
@@ -142,163 +142,163 @@
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.install_start.label }}
+								{{ form_exhibition.install_start.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.install_start(class="form-control") }}
+								{{ form_exhibition.install_start(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.install_end.label }}
+								{{ form_exhibition.install_end.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.install_end(class="form-control") }}
+								{{ form_exhibition.install_end(class="form-control") }}
 							</div>
 						</li>
 
 						<!-- <li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.prm.label }}
+								{{ form_exhibition.prm.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.prm(class="form-control") }}
+								{{ form_exhibition.prm(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.approval.label }}
+								{{ form_exhibition.approval.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.approval(class="form-control") }}
+								{{ form_exhibition.approval(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.walkthrough.label }}
+								{{ form_exhibition.walkthrough.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.walkthrough(class="form-control") }}
+								{{ form_exhibition.walkthrough(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.cb_presentation.label }}
+								{{ form_exhibition.cb_presentation.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.cb_presentation(class="form-control") }}
+								{{ form_exhibition.cb_presentation(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.license_mailed.label }}
+								{{ form_exhibition.license_mailed.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.license_mailed(class="form-control") }}
+								{{ form_exhibition.license_mailed(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.license_signed.label }}
+								{{ form_exhibition.license_signed.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.license_signed(class="form-control") }}
+								{{ form_exhibition.license_signed(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.license_borough.label }}
+								{{ form_exhibition.license_borough.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.license_borough(class="form-control") }}
+								{{ form_exhibition.license_borough(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.bond.label }}
+								{{ form_exhibition.bond.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.bond(class="form-control") }}
+								{{ form_exhibition.bond(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.coi.label }}
+								{{ form_exhibition.coi.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.coi(class="form-control") }}
+								{{ form_exhibition.coi(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.coi_renewal.label }}
+								{{ form_exhibition.coi_renewal.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.coi_renewal(class="form-control") }}
+								{{ form_exhibition.coi_renewal(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.signage_submit.label }}
+								{{ form_exhibition.signage_submit.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.signage_submit(class="form-control") }}
+								{{ form_exhibition.signage_submit(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.signage_received.label }}
+								{{ form_exhibition.signage_received.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.signage_received(class="form-control") }}
+								{{ form_exhibition.signage_received(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.press_draft.label }}
+								{{ form_exhibition.press_draft.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.press_draft(class="form-control") }}
+								{{ form_exhibition.press_draft(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.press_approved.label }}
+								{{ form_exhibition.press_approved.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.press_approved(class="form-control") }}
+								{{ form_exhibition.press_approved(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.web_text.label }}
+								{{ form_exhibition.web_text.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.web_text(class="form-control") }}
+								{{ form_exhibition.web_text(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.work_images.label }}
+								{{ form_exhibition.work_images.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.work_images(class="form-control") }}
+								{{ form_exhibition.work_images(class="form-control") }}
 							</div>
 						</li> -->
 
@@ -320,37 +320,37 @@
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.deinstall_date.label }}
+								{{ form_exhibition.deinstall_date.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.deinstall_date(class="form-control") }}
+								{{ form_exhibition.deinstall_date(class="form-control") }}
 							</div>
 						</li>
 
 						<!-- <li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.deinstall_check.label }}
+								{{ form_exhibition.deinstall_check.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.deinstall_check(class="form-control") }}
+								{{ form_exhibition.deinstall_check(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.bond_return.label }}
+								{{ form_exhibition.bond_return.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.bond_return(class="form-control") }}
+								{{ form_exhibition.bond_return(class="form-control") }}
 							</div>
 						</li>
 
 						<li class="[ row mb-3 ]">
 							<div class="[ col-md-6 text-md-right ]">
-								{{ exhibition_form.press_clippings.label }}
+								{{ form_exhibition.press_clippings.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ exhibition_form.press_clippings(class="form-control") }}
+								{{ form_exhibition.press_clippings(class="form-control") }}
 							</div>
 						</li> -->
 
@@ -415,7 +415,7 @@
 
 					<li class="exhibition__li--artworks [ row mb-3 align-items-center ]">
 						<div class="[ col-md-4 ]">
-							<label for="art_name">exhibition_form.artworks.label</label>
+							<label for="art_name">form_exhibition.artworks.label</label>
 						</div>
 						<div class="[ col-md-6 ]">
 							<input id="datalist_art" type="text" name="artworks" list="artworks" data-value="" value="" class="datalist_art [ form-control-plaintext d-none ]">
@@ -432,7 +432,7 @@
 		</section>
 
 		<section id="section--create--art">
-			{{ artwork_form.csrf_token }}
+			{{ form_artwork.csrf_token }}
 
 			<h2 class="text-center">Artwork</h2>
 
