--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -382,7 +382,7 @@
 
 								<li class="js-li_org [ row mb-3 align-items-baseline ]">
 									<div class="[ col-md-10 ]">
-										<input id="js-datalist_org" type="text" name="orgs" list="orgs" data-value="" value="" placeholder="Organization Name" class="datalist_org [ form-control ]">
+										<input id="js-datalist_org" type="text" name="orgs" list="orgs" data-value="" value="" placeholder="Organization Name" class="js-datalist-child js-datalist_org [ form-control ]">
 										{{ datalist("orgs", orgs) }}
 									</div>
 									<div class="[ col-md-2 ]">
@@ -419,7 +419,7 @@
 									<div class="[ col p-0 ]">
 										<div class="[ form-row mb-1 ]">
 											<div class="col-10">
-												<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="datalist_artwork [ form-control ]">
+												<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork [ form-control ]">
 												{{ datalist("artworks", artworks) }}
 											</div>
 											<div class="col">
@@ -429,7 +429,7 @@
 										</div>
 										<div class="form-row">
 											<div class="col-10">
-												<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="datalist_park [ form-control ]">
+												<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control ]">
 												{{ datalist("parks", parks) }}
 											</div>
 										</div>
@@ -500,7 +500,7 @@
 											<label for="artists">Artist</label>
 										</div>
 										<div class="[ col-md-6 ]">
-											<input id="js-datalist_artist" type="text" name="artists-0" list="artists" data-value="" value="" placeholder="Artist Name" class="datalist_artist [ form-control ]">
+											<input id="js-datalist_artist" type="text" name="artists-0" list="artists" data-value="" value="" placeholder="Artist Name" class="js-datalist-child js-datalist_artist [ form-control ]">
 											<!-- Call datalist macro function -->
 											{{ datalist("artists", artists) }}
 										</div>
@@ -611,7 +611,7 @@
 											<label for="artworks">Artwork</label>
 										</div>
 										<div class="[ col-md-6 ]">
-											<input id="js-datalist_artwork" type="text" name="artworks-0" list="artworks" data-value="" value="" placeholder="Artwork Name" class="datalist_artwork [ form-control ]">
+											<input id="js-datalist_artwork" type="text" name="artworks-0" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork [ form-control ]">
 											<!-- Call datalist macro function -->
 											{{ datalist("artworks", artworks) }}
 										</div>
@@ -800,7 +800,7 @@
 		<div class="[ col ]">
 			<div class="[ form-row mb-1 ]">
 				<div class="col-10">
-					<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="datalist_artwork [ form-control ]">
+					<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork [ form-control ]">
 					{{ datalist("artworks", artworks) }}
 				</div>
 				<div class="col">
@@ -810,7 +810,7 @@
 			</div>
 			<div class="form-row">
 				<div class="col-10">
-					<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="datalist_park [ form-control ]">
+					<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control ]">
 					{{ datalist("parks", parks) }}
 				</div>
 			</div>
@@ -825,7 +825,7 @@
 			<label for="artworks">Artwork</label>
 		</div>
 		<div class="[ col-md-6 ]">
-			<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="datalist_artwork [ form-control ]">
+			<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork [ form-control ]">
 			{{ datalist("artworks", artworks) }}
 		</div>
 		<div class="[ col-md-2 ]">
@@ -841,7 +841,7 @@
 			<label for="artists">Artist</label>
 		</div>
 		<div class="[ col-md-6 ]">
-			<input id="js-datalist_artist" type="text" name="artists" list="artists" data-value="" value="" placeholder="Artist Name" class="datalist_artist [ form-control ]">
+			<input id="js-datalist_artist" type="text" name="artists" list="artists" data-value="" value="" placeholder="Artist Name" class="js-datalist-child js-datalist_artist [ form-control ]">
 			{{ datalist("artists", artists) }}
 		</div>
 		<div class="[ col-md-2 ]">
@@ -857,7 +857,7 @@
 			<label for="parks">park</label>
 		</div>
 		<div class="[ col-md-6 ]">
-			<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="datalist_park [ form-control ]">
+			<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control ]">
 			{{ datalist("parks", parks) }}
 		</div>
 		<div class="[ col-md-2 ]">
@@ -870,7 +870,7 @@
 <script id="js-template_org" type="text/template">
 	<li class="js-li_org [ row mb-3 align-items-baseline ]">
 		<div class="[ col-md-10 ]">
-			<input id="js-datalist_org" type="text" name="orgs" list="orgs" data-value="" value="" placeholder="Organization Name" class="datalist_org [ form-control ]">
+			<input id="js-datalist_org" type="text" name="orgs" list="orgs" data-value="" value="" placeholder="Organization Name" class="js-datalist-child js-datalist_org [ form-control ]">
 			{{ datalist("orgs", orgs) }}
 		</div>
 		<div class="[ col-md-2 ]">
@@ -894,7 +894,7 @@
 			</div>
 			<div class="[ modal-footer ]">
 				<button id="js-modal-cancel_artwork" class="js-cancel-form butt butt--delete" type="button" data-dismiss="modal">Cancel</button>
-				<button id="js-modal-post_artwork" class="js-post-form butt butt--create" type="button">Create</button>
+				<button id="js-modal-post_artwork" class="js-post-modal butt butt--create" type="button" data-toggle="modal">Create</button>
 			</div>
 		</div>
 	</div>
@@ -915,7 +915,7 @@
 			</div>
 			<div class="[ modal-footer ]">
 				<button id="js-modal-cancel_artist" class="js-cancel-form butt butt--delete" type="button" data-dismiss="modal">Cancel</button>
-				<button id="js-modal-post_artist" class="js-post-form butt butt--create" type="button">Create</button>
+				<button id="js-modal-post_artist" class="js-post-modal butt butt--create" type="button" data-toggle="modal">Create</button>
 			</div>
 		</div>
 	</div>
@@ -936,7 +936,7 @@
 			</div>
 			<div class="[ modal-footer ]">
 				<button id="js-modal-cancel_park" class="js-cancel-form butt butt--delete" type="button" data-dismiss="modal">Cancel</button>
-				<button id="js-modal-post_park" class="js-post-form butt butt--create" type="button">Create</button>
+				<button id="js-modal-post_park" class="js-post-modal butt butt--create" type="button" data-toggle="modal">Create</button>
 			</div>
 		</div>
 	</div>
@@ -957,7 +957,7 @@
 			</div>
 			<div class="[ modal-footer ]">
 				<button id="js-modal-cancel_org" class="js-cancel-form butt butt--delete" type="button" data-dismiss="modal">Cancel</button>
-				<button id="js-modal-post_org" class="js-post-form butt butt--create" type="button">Create</button>
+				<button id="js-modal-post_org" class="js-post-modal butt butt--create" type="button" data-toggle="modal">Create</button>
 			</div>
 		</div>
 	</div>
