Fix input name values

--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -500,7 +500,7 @@
 											<label for="artists">Artist</label>
 										</div>
 										<div class="[ col-md-6 ]">
-											<input id="js-datalist_artist" type="text" name="artists-0" list="artists" data-value="" value="" placeholder="Artist Name" class="js-datalist-child js-datalist_artist [ form-control ]">
+											<input id="js-datalist_artist" type="text" name="artists" list="artists" data-value="" value="" placeholder="Artist Name" class="js-datalist-child js-datalist_artist [ form-control ]">
 											<!-- Call datalist macro function -->
 											{{ datalist("artists", artists) }}
 										</div>
@@ -611,7 +611,7 @@
 											<label for="artworks">Artwork</label>
 										</div>
 										<div class="[ col-md-6 ]">
-											<input id="js-datalist_artwork" type="text" name="artworks-0" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork [ form-control ]">
+											<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork [ form-control ]">
 											<!-- Call datalist macro function -->
 											{{ datalist("artworks", artworks) }}
 										</div>
