Add error script template

--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -879,6 +879,18 @@
 	</li>
 </script>
 
+<!-- Empty error template -->
+<script id="js-template_error" type="text/template">
+	<div class="[ fixed-top ]">
+		<div class="[ alert alert-danger alert-dismissible fade show ]" role="alert">
+		  <div class=""><strong>Error!</strong> <span class=""></span></div>
+		  <button type="button" class="[ close ]" data-dismiss="alert" aria-label="Close">
+		    <span aria-hidden="true">&times;</span>
+		  </button>
+		</div>
+	</div>
+</script>
+
 <!-- Create artwork modal -->
 <div id="js-modal_artwork" class="[ modal fade ]" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="[ modal-dialog ]" role="document">
