--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -883,10 +883,24 @@
 <script id="js-template_error" type="text/template">
 	<div class="[ fixed-top ]">
 		<div class="[ alert alert-danger alert-dismissible fade show ]" role="alert">
-		  <div class=""><strong>Error!</strong> <span class=""></span></div>
-		  <button type="button" class="[ close ]" data-dismiss="alert" aria-label="Close">
-		    <span aria-hidden="true">&times;</span>
-		  </button>
+			<div class=""><strong>Error!</strong> <span class=""></span></div>
+			<button type="button" class="[ close ]" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+		</div>
+	</div>
+</script>
+
+<!-- Empty success template -->
+<script id="js-template_success" type="text/template">
+	<div class="[ fixed-top ]">
+		<div class="bg-d-green [ alert alert-secondary alert-dismissible fade show ]" role="alert">
+			<div class="js-success-body">
+				<h3 class="js-success-message [ text-light text-center ]"></h3>
+			</div>
+			<button type="button" class="[ close ]" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
 		</div>
 	</div>
 </script>
