--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -376,17 +376,17 @@
 										<p>Exhibition Organizations</p>
 									</div>
 
-									<div class="[ col-md-6 ]">
+									<div class="[ col-md-9 ]">
 										<button id="js-create_org" class="js-create-modal butt butt--create [ mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_org">Create</button>
 										<button id="js-add_org" class="js-add-li butt butt--add" type="button">Add</button>
 										<ul class="ul_org [ pl-0 ]">
 
 											<li class="js-li_org [ row mb-3 align-items-baseline ]">
-												<div class="[ col-md-10 ]">
+												<div class="[ col-10 col-md-8 ]">
 													<input id="js-datalist_org" type="text" name="orgs" list="orgs" data-value="" value="" placeholder="Organization Name" class="js-datalist-child js-datalist_org [ form-control ]">
 													{{ datalist("orgs", orgs) }}
 												</div>
-												<div class="[ col-md-2 ]">
+												<div class="[ col-2 col-md-3 ]">
 													<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
 												</div>
 											</li>
@@ -411,29 +411,25 @@
 										<p>Exhibition Artworks</p>
 									</div>
 
-									<div class="[ col-md-6 ]">
+									<div class="[ col-md-9 ]">
 										<button id="js-create_artwork" class="js-create-modal butt butt--create [ mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_artwork">Create</button>
 										<button id="js-add_exhibition" class="js-add-li butt butt--add" type="button">Add</button>
 										<ul class="ul_art [ pl-0 ]">
 
-											<li class="js-li_exhibition [ row mb-4 ]">
-												<div class="[ col ]">
-													<div class="[ form-row mb-1 ]">
-														<div class="col-md-10">
-															<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork [ form-control ]">
-															{{ datalist("artworks", artworks) }}
-														</div>
-														<div class="col">
-															<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
-														</div>
-													</div>
-													<div class="form-row">
-														<div class="col-10">
-															<span class="align-text-bottom px-1">@</span>
-															<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control ]">
-															{{ datalist("parks", parks) }}
-														</div>
-													</div>
+											<li class="js-li_exhibition [ row mb-4 align-items-baseline ]">
+												<div class="[ col-10 col-md-8 mb-1 ]">
+													<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork [ form-control ]">
+													{{ datalist("artworks", artworks) }}
+												</div>
+												<div class="[ col-2 col-md-3 ]">
+													<span class="[ align-text-bottom px-2 ]">@</span>
+												</div>
+												<div class="[ col-10 col-md-8 ]">
+													<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control ]">
+													{{ datalist("parks", parks) }}
+												</div>
+												<div class="[ col-2 col-md-3 ]">
+													<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
 												</div>
 											</li>
 
@@ -634,7 +630,7 @@
 
 
 
-				<section id="section--create--park" class="py-5">
+				<section id="section--create--park">
 					<div id="js-div_park" class="js-create-div">
 						<form id="js-form_park" action="" method="POST">
 							{{ form_park.csrf_token }}
@@ -722,77 +718,78 @@
 					</div>
 				</section>
 
-			</div>
-		</div>
+
+
+				<section id="section--create--org">
+					<div id="js-div_org" class="js-create-div">
+						<form id="js-form_org" action="" method="POST">
+							{{ form_org.csrf_token }}
+
+							<h2 class="[ text-center ]">Organization</h2>
+
+							<div class="[ row ]">
+								<div class="[ col-6 pb-4 offset-1 ]">
+									<h3 class="section__head [ display-4 p-1 ]">Organization Bio</h3>
+								</div>
+							</div>
+
+							<div class="[ row justify-content-center ]">
+								<div class="[ col-sm-12 col-md-10 col-lg-8 py-4 ]">
+
+									<ul>
+
+										<li class="[ row mb-3 ]">
+											<div class="[ col-md-4 ]">
+												{{ form_org.name.label }}
+											</div>
+											<div class="[ col-md-6 ]">
+												{{ form_org.name(class="form-control", placeholder="Organization Name") }}
+											</div>
+										</li>
+
+										<li class="[ row mb-3 ]">
+											<div class="[ col-md-4 ]">
+												{{ form_org.website.label }}
+											</div>
+											<div class="[ col-md-6 ]">
+												{{ form_org.website(class="form-control", placeholder="www.pizza.org") }}
+											</div>
+										</li>
+
+										<li class="[ row mb-3 ]">
+											<div class="[ col-md-4 ]">
+												{{ form_org.phone.label }}
+											</div>
+											<div class="[ col-md-6 ]">
+												{{ form_org.phone(class="form-control", placeholder="###-###-####") }}
+											</div>
+										</li>
+
+									</ul>
+
+								</div>
+							</div>
+
+						</form>
+					</div>
+				</section>
 
 
 
-		<section id="section--create--org">
-			<div id="js-div_org" class="js-create-div">
-				<form id="js-form_org" action="" method="POST">
-					{{ form_org.csrf_token }}
-
-					<h2 class="[ text-center ]">Organization</h2>
-
-					<div class="[ row ]">
-						<div class="[ col-6 pb-4 offset-1 ]">
-							<h3 class="section__head [ display-4 p-1 ]">Organization Bio</h3>
+				<section id="section--submit">
+				<div class="js-submit-div">
+					<div class="row justify-content-center">
+						<div class="col-sm-12 col-md-10 text-right">
+							<button id="js-cancel_create" class="js-cancel-form butt butt--delete" type="button"><a href="{{ url_for('home') }}">Cancel</a></button>
+							<button id="js-post_create" class="js-post-form butt butt--create [ ml-2 ]" type="button" value="Create">Create</button>
 						</div>
 					</div>
-
-					<div class="[ row justify-content-center ]">
-						<div class="[ col-sm-12 col-md-10 col-lg-8 py-4 ]">
-
-							<ul>
-
-								<li class="[ row mb-3 ]">
-									<div class="[ col-md-4 ]">
-										{{ form_org.name.label }}
-									</div>
-									<div class="[ col-md-6 ]">
-										{{ form_org.name(class="form-control", placeholder="Organization Name") }}
-									</div>
-								</li>
-
-								<li class="[ row mb-3 ]">
-									<div class="[ col-md-4 ]">
-										{{ form_org.website.label }}
-									</div>
-									<div class="[ col-md-6 ]">
-										{{ form_org.website(class="form-control", placeholder="www.pizza.org") }}
-									</div>
-								</li>
-
-								<li class="[ row mb-3 ]">
-									<div class="[ col-md-4 ]">
-										{{ form_org.phone.label }}
-									</div>
-									<div class="[ col-md-6 ]">
-										{{ form_org.phone(class="form-control", placeholder="###-###-####") }}
-									</div>
-								</li>
-
-							</ul>
-
-						</div>
-					</div>
-
-				</form>
-			</div>
-		</section>
-
-
-
-		<section id="section--submit">
-		<div class="js-submit-div">
-			<div class="row justify-content-center">
-				<div class="col-sm-12 col-md-10 text-right">
-					<button id="js-cancel_create" class="js-cancel-form butt butt--delete" type="button"><a href="{{ url_for('home') }}">Cancel</a></button>
-					<button id="js-post_create" class="js-post-form butt butt--create [ ml-2 ]" type="button" value="Create">Create</button>
 				</div>
+				</section>
+
 			</div>
 		</div>
-		</section>
+
 	</div>
 
 
